added further work section

--- a/Papers/WUT-Master-Thesis/main.tex
+++ b/Papers/WUT-Master-Thesis/main.tex
@@ -91,6 +91,8 @@ C-=-1 proponuje nowe podejście do konstrukcji kompilatora, umożliwiające wpro
 \input{tex/6-wyzwania}
 \newpage
 \input{tex/7-wnioski}
+\newpage
+\input{tex/8-dalsza.tex}
 
 \newpage % Rozdziały zaczynamy od nowej strony
 
