--- a/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
+++ b/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
@@ -12,6 +12,9 @@ Klasy i interfejsy mogą implementować inne interfejsy. To jest jedyny mechaniz
 \subsection{Walidacja kodu}
 Podstawowym celem C-=-1 było zbadanie możliwości statycznej walidacji kodu, używając zaproponowanych mechanizmów meta-programowania. W kolejnych rozdziałach omówione zostaną ich konkretne zastosowania 
 \subsubsection{Atrybut noDiscard}
+\label{no_discard}
+\subsubsection{Atrybut const}
+\label{const}
 
 \subsection{Generowanie kodu}
 
@@ -20,6 +23,7 @@ Podstawowym celem C-=-1 było zbadanie możliwości statycznej walidacji kodu, u
 \subsection{Testowanie kodu}
 
 \subsection{Rozszerzalność języka}
+\label{Language_extensibility}
 Jedną z konsekwencji zaproponowanych mechanizmów jest możliwość rozszerzania języka bez modyfikacji kompilatora.
 Oznacza to że pewne elementy składni, obecne w innych językach, stają się zbędnę w C-=-1.
 \subsubsection{Symbole zewnętrzne}
