worked on further work

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -123,3 +123,19 @@ title = {C++ Templates are Turing Complete}
     howpublished = "Dostęp zdalny (14.03.2019): \url{https://github.com/ArturB/DCP-19}",
     year         = "2019"
 }
+@inproceedings{Klimiankou:contexpr_great_good_wrong_idea,
+author = {Klimiankou, Yauhen},
+year = {2019},
+month = {12},
+pages = {3-8},
+title = {Constexpr: A Great Good but Wrong Idea},
+doi = {10.1109/ISPRAS47671.2019.00007}
+}
+@inproceedings{McLoughlin1989ImperativeEF,
+  title={Imperative Effects from a Pure Functional Language},
+  author={L. McLoughlin and E. S. Hayes},
+  booktitle={Functional Programming},
+  year={1989}
+}
+
+ @misc{wagner_2021, title={Nullable reference types}, url={https://docs.microsoft.com/en-us/dotnet/csharp/nullable-references}, journal={Microsoft Docs}, publisher={Microsoft}, author={Wagner, Bill}, year={2021}, month={Sep}} 
