--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -11,6 +11,7 @@ Klasy w języku C-=-1 działają analogicznie do języków z rodziny C. Są to z
 Dwoma istotnymi elementami klas w C-=-1 są metody specjalne construct oraz finalize. Można je zrozumieć jako odpowiedniki konstruktora oraz destruktora z C++. Ponieważ C-=-1 w swojej obecnej formie nie wspiera wyjątków, nie gwarantuje wykonania finalizatorów zmiennych lokalnych w wypadku nieoczekiwanego zakończenia programu.
 \subsubsection{Interfejsy}
 \subsubsection{Funkcje}
+%todo: napisać że funkcje z defaultu są wykonywalne w czasie kompilacji. zacytować Klimiankou, Yauhen
 \subsubsection{Atrybuty}
 \subsection{Mechanizm atrybutów}
 \subsection{Reprezentacja pośrednia}\label{reprezentacja_posrednia}
