--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -27,8 +27,26 @@ Alternatywa \ref{option:abandon_attribute} jest oczywiście najprostsza, ale spr
 Użytkownicy języka powinni mieć możliwość definiowania własnych analizatorów i ich zastosowanie bez ograniczeń.
 
 Możliwości \ref{option:embed_in_attribute} oraz \ref{option:std_library_fascade} zapewniają używalność stworzonego atrybutu, ale wymagają dużej ilości pracy.
-%todo: finish
+Programista musi uwzględnić w swoim kodzie, każdą funkcję ze wszytkich używanych bibliotek.
+Poza nakładem pracy, te rozwiązania wymuszają ścisłe powiązanie pomiędzy biblioteką A a wszystkimi jej zależnościami.
+Prowadzi to do drastycznego spatku utrzymwywalności projektu i zwiększenia kosztu dołączania kolejnych zależności.
 
+Alternatywa \ref{option:analize_function_bodies} wydaje się być najlepsza. 
+Wymaga ona bardzo dużego nakładu pracy, aby ustalić czy wywołanie danej funkcji wpływa na badany niezmiennik.
+Koniecznośc przeprowadzenia dużo trudniejszej analizy, nie jest optymalna ale w obecnej formie mechanizmu atrybutów jest najlepszą możliwością.
+
+W ramach opcji \ref{option:own_std_lib} programista może postanowić zaimplementować własną bibliotekę standardową.
+To podejście, z oczywistych powodów w większości przypadków jest nieakceptowalne.
+Nakład pracy, wymagana wiedza oraz dodatkowe możliwości popełnienia błędu niemalże gwarantują, że żaden zespół nie podejmie takiej decyzji.
+
+Analogiczny problem powstał z wprowadzeniem nie-nullowalnych typów referencyjnych do języka C\# w wersji 8 \cite{wagner_2021}.
+Zespół Microsoft podjął decyzję aby traktować biblioteki nie wspierające tej analizy w sposób pesymistyczny.
+Wszystkie referencje pochodzące z takiego pliku dll, są uznawane jako potencjalnie przyjmujące wartość null.
+
+Warto zauważyć, że przypadek występujący w C\# jest jednym z prostszych.
+Brakująca analiza dotyczy wyłącznie danych 'wypływających' z biblioteki.
+Brak odpowiednich adnotacji nie wpływa natomiast na dane 'wpływające' do niej.
+Dla porównania, adnotacja \lstinline{const} wymaga analizy danych 'wpływających' do biblioteki (w języku C++ wartość typu \lstinline{int const*} jest nieużywalna jako parametr funkcji przyjmującej typ \lstinline{int*}).
 %todo: cite C#8 nullable reference types
 
 \subsection{Adnotacje a generyki}
@@ -43,3 +61,31 @@ Niestety ze względu na błędną wycenę wielkości tego projektu, ten aspekt z
 Większość potrzebnych prac została już wykonana.
 Model semantyczny programu jest trzymany w strukturach danych które można modyfikować z interpretowanego kodu.
 Proces kompilacji został zaprojektowany z uwzględnieniem zmian w reprezentacji pośredniej.
+
+% todo: explain basic library
+Aby skutecznie skorzystać z tej możliwości, należy jeszcze rozszerzyć bibliotekę podstawową języka.
+Obecnie programista może zamieniać albo usuwać istniejące elementy modelu semantycznego.
+Aby umożliwić użytkownikom pełne wykorzystanie potencjału C-=-1, do biblioteki podstawowej należy dodać możliwość dynamicznego tworzenia elementów modelu.
+W przyszłosci, do języka trzeba będzie dodać funkcje do tworzenia nowych funkcji, instrukcji oraz wyrażeń.
+
+\subsection{Ewaluacja stałych wyrażeń w trakcie kompilacji}
+
+Jednym z celów C-=-1 było umożliwienie ewaluacji dowolnie złożonego wyrażenia do stałej oraz wykonywania obliczeń i generowania dodaktowych plików w trakcie kompilacji.
+Z tego powodu, większość funkcji można wykonać zarówno w czasie kompilacji jak i uruchomienia.
+
+Wśród nich są też procedury, mające efekty uboczne, na przykład interakcja z systemem plików czy nawet modyfikacja zmiennej globalnej.
+Programista musi wiedzieć w którym etapie życia programu, kompilacji czy uruchomienia, te funkcje zostaną wykonane.
+Jednak Z punktu widzenia modelu semantycznego one w żaden sposób się nie wyróżniają.
+
+Ewaluacja wyrażeń, zawierających taki kod, w czasie kompilacji, prowadziłaby do błednego zachowania programu.
+W czasie kompilacji, dochodziłoby do zbędnych operacji na plikach, bądź nawet błędów kompilacji.
+Natomiast w czasie uruchomienia, program pomijałby pewne operacje, operując na przykład na plikach dostępnych w czasie kompilowania.
+
+Aby poprawnie zrealizować tą funkcjonalność, koniecznym jest wprowadzenie do języka wyróżnienia funkcji które wpływają na, bądź zależą od globalnego stanu.
+W tym celu można zastosować koncepcję 'czystej' funkcji z funkcyjnych języków programowania \cite{McLoughlin1989ImperativeEF}.
+Dzięki temu, kompilator będzie w stanie ustalić, które wyrażenia może ewaluować jako część optymalizacji a które muszą pozostać w skompilowanym programie.
+
+Takie rozwiązanie omija problem powstaly z wprowadzeniem słowa kluczowego \lstinline{constexpr} w C++\cite{Klimiankou:contexpr_great_good_wrong_idea}.
+Czystość funkcji niesie za sobą dużo więcej konsekwencji niż to że funkcja może być częścią procesu optymalizacji.
+Oznacza to że programista nie musi być świadomy transformacji które wykonuje kompilator.
+
