--- a/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
+++ b/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
@@ -29,5 +29,8 @@ Atrybut no\_discard zamiast uciszać ostrzeżenie, generuje je. Jego zadaniem je
 Typowym przykładem zastosowanie tego atrybutu są kody błędów. Ze względu na duży koszt mechanizmu wyjątków w C++, w niektórych projektach się ich nie stosuje. Zamiast tego, funkcje których wykonanie może się nie powieść, zwracają strukturę informującą o błędzie. Ponieważ programista wołający taką funkcję, nie ma obowiązku sprawdzić wyniku tego wywołania, łatwo było o błąd. Stąd konieczność atrybutu no\_discard.\par
 Podstawową wadą atrybutów w C++ jest fakt, że są one zachowaniem bezpośrednio wpisanym w kompilator. Nie istnieje możliwość napisania własnego atrybutu a ich lista jest bardzo krótka.\par
 \subsubsection{Funkcje constexpr}
-Język C++11 wprowadził koncepcję constexpr. Zaaplikowanie tego modyfikatora do zmiennej lub funkcji, informuje kompilator że mogą one być ewaluowane w trakcie kompilacji. Funkcje constexpr mają też nałożony szereg ograniczeń co do swojej struktury. Z każdą kolejną wersją języka są one rozluźniane, jednak nie każda funkcja może być ewaluowana w trakcie kompilacji.\par
-Ponadto, funkcje constexpr nie mają większego dostępu do struktury programu niż normalny program. Nie dają one możliwości modyfikowania istniejącego ani generowania nowego kodu. Stanowią one więc jedynie sposób na optymalizację programu.\par
+Język C++11 wprowadził koncepcję constexpr. Zaaplikowanie tego modyfikatora do zmiennej lub funkcji, informuje kompilator że mogą one być ewaluowane w trakcie kompilacji. Funkcje constexpr mają też nałożony szereg ograniczeń co do swojej struktury. Z każdą kolejną wersją języka są one rozluźniane, jednak nie każda funkcja może być ewaluowana w trakcie kompilacji.
+
+Ponadto, funkcje constexpr nie mają większego dostępu do struktury programu niż normalny program. Nie dają one możliwości modyfikowania istniejącego ani generowania nowego kodu. Stanowią one więc jedynie sposób na optymalizację programu.
+W związku z tym, mechanizm \lstinline{constexpr} został skrytykowany za jawne definiowanie które funkcje są wykonywalne w czasie kompilacji.
+Autor artykułu argumentował, że wykonywalność funkcji w czasie kompilacji powinna być przejrzysta dla programisty i obsługiwana przez kompilator automatycznie \cite{Klimiankou:contexpr_great_good_wrong_idea}.
