--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -13,6 +13,8 @@ Dwoma istotnymi elementami klas w C-=-1 są metody specjalne construct oraz fina
 \subsubsection{Funkcje}
 %todo: napisać że funkcje z defaultu są wykonywalne w czasie kompilacji. zacytować Klimiankou, Yauhen
 \subsubsection{Atrybuty}
+
+Atrybuty, pod względem 
 \subsection{Mechanizm atrybutów}
 \subsection{Reprezentacja pośrednia}\label{reprezentacja_posrednia}
 Programista C-=-1 ma możliwość analizować oraz modyfikować reprezentację pośrednią swojego programu w czasie kompilacji. C-=-1 Intermidiate Representation, w skrócie CIR jest nieznacznie uproszczoną wersją języka, reprezentowaną jako struktura danych.
