--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -46,6 +46,7 @@ Na przykład w języku C++ \lstinline{int a = 4;} deklaruje i inicjalizuje zmien
 Wyrażenia lietrałowe mogą reprezentować stałe różnych typów wbudowanych.
 
 \subsection{Integracja z back-endem}
+\label{backend_integration}
 Przy pierwszym podejściu do budowy reprezentacji pośredniej, użyto dedykowanych struktur danych. Było to podejście najbardziej naturalne i dające najwięcej bezpieczeństwa dzięki silnemu typowaniu. Wszystkie struktury danych opisane w rozdziale \ref{reprezentacja_posrednia} miały powiązane ze sobą klasy C++.
 
 
