--- a/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
+++ b/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
@@ -32,3 +32,17 @@ W rozdziale \ref{Language_extensibility} opisano przykłady składni nie wspiera
 Wykorzystując go, programista może zawęzić zbiór programów akceptowanych przez kompilator, przy użyciu analizy statycznej.
 W rozdziałach \ref{no_discard} oraz \ref{const} przedstawiono przykłady adnotacji istniejących w C++ jako część języka, które można dodać do C-=-1.
 Po dodaniu mechanizmu wyjątków, trywialną będzie też implementacja atrybutu \lstinline{noexcept}, oznaczającego funkcje która nigdy nie rzuca.
+
+\subsection{Możliwa krytyka}
+
+Zaproponowane podejście niesie ze sobą pewne wady.
+Być możne najpoważniejszą z nich jest utrudniony rozwój kompilatora.
+Ponieważ model programu musi edytowalny przez interpretowany kod, należy go zbudować ze struktur danych interpretera.
+Dokładne uzasadnienie i opis implementacji znajduje się w rozdziale \ref{backend_integration}.
+Opisane tam wyzwania stanowią argument przeciwko konstruowaniu języków programowania w ten sposób. 
+Chwilowo nie ma alternatywnej implementacji, która zachowuje silne typowanie w kodzie kompilatora.
+
+Inny problem, dotyczy samej konstrukcji języka.
+Zaproponowane w tej pracy mechanizmy metaprogramistyczne, mogą prowadzić do zwiększenia poziomu złożoności tworzonego kodu.
+Ponieważ atrybuty w C-=-1 mogą nadpisywać kod użytkownika, nadużycie tego mechanizmu może prowadzić do trudno przewidywalnego zachowania.
+Zasadność tej krytyki powinna być tematem przyszłych badań.
