source for sfinae in thesis

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -139,3 +139,33 @@ doi = {10.1109/ISPRAS47671.2019.00007}
 }
 
  @misc{wagner_2021, title={Nullable reference types}, url={https://docs.microsoft.com/en-us/dotnet/csharp/nullable-references}, journal={Microsoft Docs}, publisher={Microsoft}, author={Wagner, Bill}, year={2021}, month={Sep}} 
+
+@book{cppTemplatesCompleteGuide,
+author = {Vandevoorde, David and Josuttis, Nicolai M. and Gregor, Douglas},
+title = {C++ Templates: The Complete Guide (2nd Edition)},
+year = {2017},
+isbn = {0321714121},
+publisher = {Addison-Wesley Professional},
+edition = {2nd},
+abstract = {Templates are among the most powerful features of C++, but they remain misunderstood
+and underutilized, even as the C++ language and development community have advanced.
+In C++ Templates, Second Edition, three pioneering C++ experts show why, when, and
+how to use modern templates to build software thats cleaner, faster, more efficient,
+and easier to maintain. Now extensively updated for the C++11, C++14, and C++17 standards,
+this new edition presents state-of-the-art techniques for a wider spectrum of applications.
+The authors provide authoritative explanations of all new language features that either
+improve templates or interact with them, including variadic templates, generic lambdas,
+class template argument deduction, compile-time if, forwarding references, and user-defined
+literals. They also deeply delve into fundamental language concepts (like value categories)
+and fully cover all standard type traits. The book starts with an insightful tutorial
+on basic concepts and relevant language features. The remainder of the book serves
+as a comprehensive reference, focusing first on language details and then on coding
+techniques, advanced applications, and sophisticated idioms. Throughout, examples
+clearly illustrate abstract concepts and demonstrate best practices for exploiting
+all that C++ templates can do. Understand exactly how templates behave, and avoid
+common pitfalls Use templates to write more efficient, flexible, and maintainable
+software Master todays most effective idioms and techniques Reuse source code without
+compromising performance or safety Benefit from utilities for generic programming
+in the C++ Standard Library Preview the upcoming concepts feature The companion website,
+tmplbook.com, contains sample code and additional updates.}
+}
