--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -1,5 +1,11 @@
 \section{Wyzwania}
+
+W związku z nietypowym podejściem do problemu, zarówno projekt jak i implementacja C-=-1 przedstawiła szereg ciekawych wyzwań.
+W szczególności są one powiązane z możliwością wykonywania różnego kodu w zależności od kontekstu uruchomienia oraz publiczną naturą reprezentacji pośredniej.
+
 \subsection{Instancje generyków jako element modelu semantycznego}
+Jednym z wyzwań powiązanych z publicznością reprezentacji pośredniej, lokalizacja instancji generyków w modelu semantycznym.
+%todo: finish
 Gdzie wsadzić instancję generyka?
 
 \subsection{Kod wykonywany w fazie kompilacji}
@@ -27,7 +33,7 @@ Kompilator najpierw kompletował reprezentacje pośrednią instancji wszystkich 
 Przy próbie dynamicznej alokacji typu który nie mógł istnieć w czasie uruchomienia, takiego jak deskryptor funkcji, prowadziło to do odrzucenia poprawnego programu.
 
 Naprawa tego problemu, wymagała weryfikacji czy dana funkcja jest wykonywalna, w jakimkolwiek kontekście, po wykonaniu kodu powiązanych atrybutów.
-Alternatywnym podejściem jest ignorowanie traktowanie błędów w instancji generyka, jako sygnał do odrzucenia tej specjalizacji, tak jak zostało to rozwiązane w C++. %todo: cite SFINAE
+Alternatywnym podejściem jest ignorowanie traktowanie błędów w instancji generyka, jako sygnał do odrzucenia tej specjalizacji, tak jak zostało to rozwiązane w C++ \cite{cppTemplatesCompleteGuide}.
 Takie rozwiązanie mogłoby jednak prowadzić do zaśmiecania modelu semantycznego funkcjami, które nie mogą zostać użyte w żadnym kontekście i nie zawierały akurat żadnych błędów.
 %todo: formalize?
 \subsection{Operator new}
@@ -38,7 +44,10 @@ Operator \lstinline{new} w C-=-1, tak jak w C++ służy do dynamicznej alokacji 
 \label{Function_overload_resolution}
 To czy funkcja jest wykonywalna w czasie kompilacji albo uruchomienia można ustalić bardzo późno w trakcie budowy modelu semantycznego.
 
-Na pytanie "czy ta funkcja może być użyta w tym kontekście", kompilator jest w stanie odpowiedzieć dopiero kiedy wykonanły się na niej funkcje \lstinline{attach} wszystkich powiązanych z nią atrybutów 
+Na pytanie "czy ta funkcja może być użyta w tym kontekście", kompilator jest w stanie odpowiedzieć dopiero kiedy wykonanły się na niej funkcje \lstinline{attach} wszystkich powiązanych z nią atrybutów.
+
+%todo: example?
+
 \subsection{Wyrażenia literałowe}
 
 Wyrażenie literałowe przedstawia stałą wartość.
