--- a/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
+++ b/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
@@ -3,12 +3,18 @@ Wśród przemysłowo zastosowanych języków programowania istnieje szeroka gama
 
 \subsection{C\#}
 Język C\# od początku swojego istnienia wspierał refleksję.
-Środowisko uruchomieniowe .Net zostało zaprojketowane z myślą o dynamicznym ładowaniu plików bibliotecznych.
-W związku z tym, większość mechanizmów metaprogramistycznych w językach opartych na nim, 
+Środowisko uruchomieniowe .Net zostało zaprojektowane z myślą o dynamicznym ładowaniu plików bibliotecznych.
+W związku z tym większość mechanizmów metaprogramistycznych w językach opartych na nim jest używana w trakcie uruchomienia.
+W ostatnich wersjach Microsoft dodał jednak pewne możliwości do generowania i analizowania kodu w trakcie kompilacji.
 \subsubsection{Atrybuty}
 W języku C\# atrybuty służą głównie do przechowywania metadanych.
+Na rynku, istnieją rozwiązania, które wykorzystują takie adnotacje do modyfikacji programu, jednak takie zastosowanie nie jest proste.
+Ponadto, jakiekolwiek zmiany w kodzie aplikacji, będą zachodzić w trakcie uruchomienia, nie kompilacji.
+Oznacza to narzuty, które w wielu kontekstach są nieakceptowalne.
 \subsubsection{Refleksja}
 \subsubsection{Analizatory kodu}
+Jednym z wyników publicznego udostępnienia kodu kompilatora Roslyn, było udostępnienie programistom API kompilatora służącego do walidacji kodu.
+
 \subsubsection{Generatory kodu}
 C\#9 wprowadził możliwość pisania generatorów kodu. Jest to bardzo podobne rozwiązanie do makr w języku Rust. Generatory kodu to specjalne klasy, których kod jest wykonywany w trakcie kompilacji. 
 Mechanizm C\# jest jednak bardziej zaawansowany. Umożliwia generowanie kodu używając wszystkich elementów języka, zamiast zapewniać prosty szablon. Te generatory, tak jak w Rust, nie mają jednak dostępu do informacji zbieranych przez kompilator, poza drzewem składniowym oraz nie mogą modyfikować istniejącego kodu.\par
