--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -69,7 +69,7 @@ Aby umożliwić użytkownikom pełne wykorzystanie potencjału C-=-1, do bibliot
 W przyszłosci, do języka trzeba będzie dodać funkcje do tworzenia nowych funkcji, instrukcji oraz wyrażeń.
 
 \subsection{Ewaluacja stałych wyrażeń w trakcie kompilacji}
-
+\label{compile_time_constant_evaluation}
 Jednym z celów C-=-1 było umożliwienie ewaluacji dowolnie złożonego wyrażenia do stałej oraz wykonywania obliczeń i generowania dodaktowych plików w trakcie kompilacji.
 Z tego powodu, większość funkcji można wykonać zarówno w czasie kompilacji jak i uruchomienia.
 
