--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -4,14 +4,33 @@
 Język C-=-1 w przeciwieństwie do większości współczesnych języków programowania jest oparty na eksponowaniu programiście struktur danych tworzonych przez kompilator. Deskryptory typów, funkcji, przestrzeni nazw oraz enumeratorów, razem z reprezentacją pośrednią kodu są udokumentowaną częścią języka (załącznik nr. 1).
 Aby umożliwić użytkownikowi wykorzystanie tych struktur danych, C-=-1 musi zapewnić sposób na napisanie kodu wykonywanego w czasie kompilacji, który może nimi manipulować. W tym celu, postanowiono rozszerzyć koncepcję atrybutu aby umożliwić inspekcję i modyfikację reprezentacji pośredniej.
 C-=-1 został zaprojektowany na bazie założeń C++. Obydwa te języki są statycznie typowane, kompilowane oraz nie wymagają specjalnego środowiska uruchomieniowego. Przy projektowaniu C-=-1 skorzystano jednak z doświadczeń wyciągniętych z C++ w aspektach takich jak dziedziczenie wielobazowe czy zarządzanie pamięcią. Obydwa te aspekty zostały opisane odpowiednio w rozdziałach \ref{elementy_jezyka} oraz \ref{struktura_paczki}
+
 \subsection{Składnia}
-\subsection{Elementy języka}\label{elementy_jezyka}
+
+\subsection{Elementy języka}
+\label{elementy_jezyka}
+
 \subsubsection{Klasy}\label{klasy}
-Klasy w języku C-=-1 działają analogicznie do języków z rodziny C. Są to zbiory danych (pola klasy) z którymi powiązane są pewne operacje (metody). Wszystkie elementy takiego typu mogą mieć ograniczenia dostępu.
-Dwoma istotnymi elementami klas w C-=-1 są metody specjalne construct oraz finalize. Można je zrozumieć jako odpowiedniki konstruktora oraz destruktora z C++. Ponieważ C-=-1 w swojej obecnej formie nie wspiera wyjątków, nie gwarantuje wykonania finalizatorów zmiennych lokalnych w wypadku nieoczekiwanego zakończenia programu.
+Klasy w języku C-=-1 działają analogicznie do języków z rodziny C.
+Są to zbiory danych (pola klasy) z którymi powiązane są pewne operacje (metody).
+Wszystkie elementy takiego typu mogą mieć ograniczenia dostępu.
+Dwoma istotnymi elementami klas w C-=-1 są metody specjalne \lstinline{construct} oraz \lstinline{finalize}.
+Można je zrozumieć jako odpowiedniki konstruktora oraz destruktora z C++.
+Ponieważ C-=-1 w swojej obecnej formie nie wspiera wyjątków, nie gwarantuje wykonania finalizatorów zmiennych lokalnych w wypadku nieoczekiwanego zakończenia programu.
 \subsubsection{Interfejsy}
 \subsubsection{Funkcje}
-%todo: napisać że funkcje z defaultu są wykonywalne w czasie kompilacji. zacytować Klimiankou, Yauhen
+W C-=-1 funkcje oraz metody działają na tej samej zasadzie co w C++.
+Istotną różnicą jest możliwość ich wykonania w czasie kompilacji.
+Domyślnie, funkcje mogą być wykonywane w dowolnym kontekście.
+O ile programista nie sprecyzował żadnych ograniczeń, podprogram może zostać wykonany zarówno w czasie uruchomienia jak i kompilacji.
+Wywoływanie funkcji w trakcie kompilacji ma kilka różnych zastosowań.
+
+Najbardziej oczywistym przykładem, który był historyczną motywacją dla rozwoju kompilatorów w tym kierunku, jest optymalizacja programu.
+Jeśli wyrażenie zależy wyłacznie od stałych, kompilator może podjąć decyzję o jego ewaluacji do stałej.
+C-=-1, w przeciwieństwie do C++, umożliwia optymalizację niemalże dowolnej funkcji w ten sposób.
+Ponieważ programista nie musi jawnie precyzować że procedura jest wykonywalna w czasie kompilacji, język unika problemów powiązanych z modyfikatorem \lstinline{constexpr} z C++ \cite{Klimiankou:contexpr_great_good_wrong_idea}
+Taka możliwość tworzy także pewne wyzwania, dokładniej opisane w rozdziale \ref{compile_time_constant_evaluation}.
+
 \subsubsection{Atrybuty}
 
 Atrybuty, pod względem 
