--- a/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
+++ b/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
@@ -46,3 +46,5 @@ Inny problem, dotyczy samej konstrukcji języka.
 Zaproponowane w tej pracy mechanizmy metaprogramistyczne, mogą prowadzić do zwiększenia poziomu złożoności tworzonego kodu.
 Ponieważ atrybuty w C-=-1 mogą nadpisywać kod użytkownika, nadużycie tego mechanizmu może prowadzić do trudno przewidywalnego zachowania.
 Zasadność tej krytyki powinna być tematem przyszłych badań.
+
+%todo: opisać problem z systemem typów ad-hoc
