--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -50,7 +50,7 @@ Dla porównania, adnotacja \lstinline{const} wymaga analizy danych 'wpływający
 %todo: cite C#8 nullable reference types
 
 \subsection{Adnotacje a generyki}
-
+\label{Generic_adnotations}
 trzeba dorzucić możliwość aplikacji atrybutu const do parametrów generyka, np list< [const] usize>
 
 \subsection{Modyfikowanie kodu}
@@ -89,3 +89,5 @@ Takie rozwiązanie omija problem powstaly z wprowadzeniem słowa kluczowego \lst
 Czystość funkcji niesie za sobą dużo więcej konsekwencji niż to że funkcja może być częścią procesu optymalizacji.
 Oznacza to że programista nie musi być świadomy transformacji które wykonuje kompilator.
 
+\subsection{Integracja ze środowiskiem programistycznym}
+\label{IDE_integration}
