--- a/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
+++ b/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
@@ -10,11 +10,101 @@ C-=-1 został zaprojektowany z myślą o wsparciu stylu obiektowego. Użytkownik
 Klasy i interfejsy mogą implementować inne interfejsy. To jest jedyny mechanizm dynamicznego polimorfizmu w C-=-1. Ta decyzja została podjęta częściowo w celu uproszczenia języka, a częściowo ponieważ dziedziczenie między konkretnymi klasami jest uważane za złą praktykę.
 
 \subsection{Walidacja kodu}
-Podstawowym celem C-=-1 było zbadanie możliwości statycznej walidacji kodu, używając zaproponowanych mechanizmów meta-programowania. W kolejnych rozdziałach omówione zostaną ich konkretne zastosowania 
+Podstawowym celem C-=-1 było zbadanie możliwości statycznej walidacji kodu, używając zaproponowanych mechanizmów metaprogramowania.
+W kolejnych rozdziałach omówione zostaną przykładowe analizatory, które zostały zaimplementowane w ramach biblioteki standardowej, bądź których implementacja jest możliwa.
+Ma to zademonstrować praktyczne aplikacje udostępnienia programiście modelu semantycznego tworzonego programu.
+
+
+
 \subsubsection{Atrybut noDiscard}
 \label{no_discard}
+
+Atrybut \lstinline{noDiscard} służy do zapewnienia, że wynik funkcji nie zostanie zgnorowany.
+Tego typu adnotacja istnieje w C++ od wersji 17.
+Ma on na celu wyeliminować błędy takie jak ignorowanie kodu błędu, czy niepoprawne wywołanie funkcji o mylącej nazwie.
+
+W C-=-1, w przeciwieństwie do większości języków niskiego poziomu, stworzenie analizatora który zapewnia taką walidację jest trywialne.
+Listing \ref{lst:noDiscardCm1} zawiera kod atrybutu \lstinline{noDiscard} z biblioteki standardowej C-=-1.
+Na linii 4 deklaruje on specjalną funkcję \lstinline{onCall} (specjalne funkcje atrybutów zostały opisane w rozdziale \ref{Attributes_cm1}), która reaguje na wywołania funkcji do której został zaaplikowany.
+
+Wewnątrz tego podprogramu, atrybut sprawdza czy bezpośrednim rodzicem tego wyrażenia jest wyrażenie czy instrukcja.
+Jeśli jest nim instrukcja, oznacza to że wynik wywołania jest ignorowany i trzeba zgłosić błąd, używając funkcji \lstinline{raiseError}.
+W przeciwnym wypadku żadne akcje nie są konieczne.
+
+Listing \ref{lst:noDiscardUsageCm1} demonstruje zastosowanie atrybut \lstinline{noDiscard}.
+Zignorowanie wartości zwracanej przez funkcję oznaczoną tą odnotacją, tak jak na linii 5, powoduje zgłoszenie błędu o kodzie i komunikacie zgodnym z linią 7 listingu \ref{lst:noDiscardCm1}.
+Ponadto, kompilator otrzymuje wskazanie do pliku źródłowego na punkt, który wywołał ten błąd.
+Ta informacja może być potem użyta do zaprezentowania programiście dokładniejszej diagnostyki, bądź do podkreślenia kodu w zintegrowanym środowisku programistycznym (rozdział \ref{IDE_integration}).
+
+Ten przykład dobrze ilustruje, że mając dostęp do modelu semantycznego programu, implementajca niektórych typów walidacji staje się trywialna.
+W większości języków programowania taka analiza wymaga modyfikacji kompilatora albo zewnętrznego narzędzia.
+
+\begin{minipage}{\linewidth}
+  
+  \begin{lstlisting}[
+    numbers=left,
+    firstnumber=0,
+    caption={Atrybut noDiscard w C-=-1},
+    aboveskip=0pt,
+    label={lst:noDiscardCm1}
+    ]
+public att<function> NoDiscard
+{
+  public fn attach(f: functionDescriptor)
+  {}
+  public fn onCall(call: functionCallExpression*)
+  {
+  if(call._parentStatment != null<IInstruction>())
+    raiseError(
+      &(call._pointerToSource), 
+      "Return value of a no-discard function is not used",
+      123
+    );
+  }
+}
+\end{lstlisting}
+\end{minipage}
+
+
+\begin{minipage}{\linewidth}
+  
+  \begin{lstlisting}[
+    numbers=left,
+    firstnumber=0,
+    caption={Przykład użycia atrybut noDiscard w C-=-1},
+    aboveskip=0pt,
+    label={lst:noDiscardUsageCm1}
+    ]
+[noDiscard()]
+fn noDiscardFunction() -> usize;
+
+fn main() -> usize
+{
+  noDiscardFunction(); // error 123: Return value of
+                       // a no-discard function is not use
+  let x = noDiscardFunction();     // ok
+  let y = x + noDiscardFunction(); // ok
+  return noDiscardFunction();      // ok
+}
+\end{lstlisting}
+\end{minipage}
+
 \subsubsection{Atrybut const}
 \label{const}
+
+Bardziej złożonym przykładem analizatora, jest atrybut \lstinline{const}.
+Odpowiada on modyfiaktorowi \lstinline{const} z języka C++.
+Zaaplikowanie go do typu oznacza, że do jego instancja jest niemodyfikowalna.
+Każda próba modyfikacji, po zainicjalizowaniu, jest błędem.
+
+W obecnym stanie kompilatora oraz języka, możliwa jest implementacja części tej funkcjonalności.
+Pełne wsparcie dla tego modyfikatora, przy użyciu atrybutu, wymaga od C-=-1 następujących właściwości:
+\begin{enumerate}
+  \item \label{prop:Attribute_function_overloading} Atrybuty są brane pod uwagę w trakcie wyboru przeciążenia funkcji
+  \item \label{prop:Generic_adnotations} Istnieje sposób na modyfikowanie zachowania zmiennych, pól i parametrów w generykach, przy tworzeniu ich instancji
+  \item \label{prop:Reference_adnotations} Przy aplikowaniu atrybutu do zmiennej typu referencyjnego, istnieje sposób na rozróżnienie między stałym wskazaniem a wskazaniem na stałą.
+\end{enumerate}
+
 
 \subsection{Generowanie kodu}
 
