--- a/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
+++ b/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
@@ -105,6 +105,8 @@ Pełne wsparcie dla tego modyfikatora, przy użyciu atrybutu, wymaga od C-=-1 na
   \item \label{prop:Reference_adnotations} Przy aplikowaniu atrybutu do zmiennej typu referencyjnego, istnieje sposób na rozróżnienie między stałym wskazaniem a wskazaniem na stałą.
 \end{enumerate}
 
+Właściwość \ref{prop:Attribute_function_overloading} jest już udokumentowaną, choć nieprzetestowaną, częścią języka (rozdział \ref{Attributes_definition}).
+
 
 \subsection{Generowanie kodu}
 
