--- a/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
+++ b/Papers/WUT-Master-Thesis/tex/7-wnioski.tex
@@ -6,6 +6,9 @@ Ponadto wsparcie dla C-=-1 jest minimalne: nie istnieje edytor, który koloruje 
 Jego celem nie było jednak zastąpić C++, Rust czy C\#, a zbadać jak priorytetyzacja wsparcia dla statycznego metaprogramowania wpływa na język oraz pisany w nim kod. 
 Pod tym względem, C-=-1 można uznać za sukces.
 
+Wiele aspektów tego języka, zostało niestety omówione wyłącznie na poziomie teorytycznym, ze względu na brak wsparcia kompilatora.
+Stworzenie nowego języka programowania jest zadaniem dużo bardziej złożonym i czasochłonnym niż zakładano na początku tej pracy.
+Z tego powodu, zabrakło czasu aby zrealizować projekt C-=-1 w pełni.
 
 
 \subsection{Kategoryzacja języka}
