--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -91,3 +91,8 @@ Oznacza to że programista nie musi być świadomy transformacji które wykonuje
 
 \subsection{Integracja ze środowiskiem programistycznym}
 \label{IDE_integration}
+
+\subsection{System typów a atrybuty}
+\label{further:adnotated_type_system}
+
+wychodzi na to że koncepcja adnotacji jest bardzo mocno powiązana z systemem typów. Może trzeba przemyśleć w ogóle system typów języka. Odnośnik do teorii typów/kategorii
