fixed existing solutions

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -22,6 +22,18 @@ doi = {10.1145/3354584}
     url= "stroustrup.com/bs_faq.html",
     urldate = {2020-10-28},
 }
+
+@online{roslyn,
+    author = "Dotnet",
+    url = "github.com/dotnet/roslyn",
+    urldate = {2021-11-12}
+}
+
+@online{rust,
+    url="www.rust-lang.org/",
+    urldate = {2021-11-12}
+}
+
 @article{template_turing_complete,
 author = {Veldhuizen, Todd},
 year = {2003},
@@ -33,7 +45,7 @@ title = {C++ Templates are Turing Complete}
     author = "Free Software Foundation",
     note   = "Dostęp zdalny (24.10.2020): \url{https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html}",
 }
-@book{ISO:2012:III,
+@techreport{ISO:2012:III,
   added-at = {2012-10-08T01:13:47.000+0200},
   address = {Geneva, Switzerland},
   author = {{ISO}},
@@ -50,11 +62,21 @@ title = {C++ Templates are Turing Complete}
   remark = {Revises ISO/IEC 14882:2003.},
   timestamp = {2012-10-08T01:13:47.000+0200},
   title = {{ISO/IEC 14882:2011 Information technology --- Programming languages --- C++}},
+  type = {Standard},
   url = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=50372},
   year = 2012
 }
 
-
+@techreport{ISO:cpp20,
+type = {Standard},
+key = {ISO/IEC 14882:2020(E) },
+month = mar,
+year = {2020},
+title = {{Programming languages — C++}},
+volume = {2020},
+address = {Geneva, CH},
+institution = {International Organization for Standardization}
+}
 
 % Fragment książki (np. zakres stron).
 @inbook{wang97,
