--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -10,7 +10,7 @@ Jednym z wyzwań powiązanych z publicznością reprezentacji pośredniej, lokal
 Gdzie wsadzić instancję generyka?
 
 \subsection{Kod wykonywany w fazie kompilacji}
-O tym czemu atrybuty są przetwarzane przed kodem i nie mogą używać funkcji z biblioteki w której zostały zdefiniowane.
+O tym, czemu atrybuty są przetwarzane przed kodem i nie mogą używać funkcji z biblioteki, w której zostały zdefiniowane.
 
 \subsection{Funkcje generyczne z ograniczeniami}
 
